# Batman

./: Cargo.toml
src/: main.rs
src/cli/: cli_util.rs
src/database_operations/: create_env.rs  delete_env.rs  mod.rs  show_envs.rs  update_env.rs
src/database_utils/: config_folder_setup.rs  get_connection.rs  initial_database_setup.rs  mod.rs
src/environment_setter/: env_setter.rs  generate_env_var_shell_script.rs  mod.rs
